3-apps/maliev-quote-engine/overlays/development/environment-config-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maliev-quote-engine
spec:
  template:
    spec:
      containers:
        - name: maliev-quote-engine
